# RobbyMD

./: .env.example  .gitattributes  .gitignore  CC-BY-4.0-ATTRIBUTIONS.md  CLAUDE.md  Eng_doc.md  LICENSE  MODEL_ATTRIBUTIONS.md  PRD.md  README.md  SYNTHETIC_DATA.md  abouttoupdatereadme.md  context.md  cursor.md  methodology.md  opus4.7_usage.md  progress.md  pyproject.toml  reasons.md  rerun_fixes.md  rules.md
data/broad_kb/: build_broad_kb.py  getthediagnosis_kb.json  stats.json
docs/: asr_benchmark.md  asr_engineering_spec.md  asr_performance_spec.md  gt_v2_study_notes.md  research_brief.md  submission_200_words.md
docs/decisions/: 2026-04-21_lr-table-chest-pain-coupling-audit.md  2026-04-21_medcon-implementation-notes.md  2026-04-21_medcon-tiered-fallback.md  2026-04-21_opus_api_compliance.md  2026-04-21_pyannote-ccby40-model-weights.md  2026-04-24_opus-reasoning-only.md  2026-04-24_reasoning-deepseek-r1-maas.md  2026-04-25_longmemeval-capability-matrix.md  2026-04-25_longmemeval-context-layer-handoff.md  README.md  licensing_clarifications.md
eval/: README.md  __init__.py  _common.py  _openai_client.py  bundle2_orientation.md  getthediagnosis_data.csv  getthediagnosis_data.json  scrape_getthediagnosis.py
eval/aci_bench/: LIMITATIONS.md  README.md  __init__.py  adapter.py  baseline.py  extractors.py  fetch.py  full.py  llm_medcon.py  quickumls_client.py  run.py  smoke_test.py
eval/ddxplus/: LIMITATIONS.md  README.md  __init__.py  adapter.py  baseline.py  fetch.py  full.py  run.py
eval/infra/: README.md  deploy_qwen_azure.sh  deploy_qwen_gcp.sh  modal_bge_m3.py  modal_qwen.py  modal_qwen3_32b.py
eval/longmemeval/: LIMITATIONS.md  README.md  __init__.py  adapter.py  audit_pipeline.py  autopsy_traces.json  baseline.py  context.py  cost_tracker.py  decision_snapshot.py  diagnostic_results_v4.cases.json  diagnostic_results_v4.json  diagnostic_slice.py  evidence_verifier.py  fetch.py  final_runner.py  final_runner_v2.py  full.py  official_evaluate_qa.py  official_print_metrics.py  official_run.py  pipeline.py  question_router.py  reader_con.py  round_retrieval_run.py  run.py  (+4 more)
research/: asr_stack.md  clinical_chest_pain.md  validation_report.md
scripts/: _bundle4_l4_measure.sh  _bundle4_l4_setup.sh  demo_mid_case.py  download_and_verify_licenses.py  download_and_verify_variant_a.py  install_scispacy.sh  install_umls.sh  record_eval.sh  render_originals.py  render_pediatric.py  renormalize_wer.py  run_demo.sh  setup.sh
src/: __init__.py
tests/: conftest.py
trs_benchmarks/: test_audit_pipeline.py
ui/: .gitignore  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
(+352 files in other folders)
